--- a/client/index.html
+++ b/client/index.html
@@ -26,6 +26,7 @@
     <!--Bower Libs-->
     <script src="client/jquery/dist/jquery.js"></script>
     <script src="client/bootstrap/dist/js/bootstrap.js"></script>
+
     <!-- Angular Libs -->
     <script src="client/api-check/dist/api-check.js"></script>
     <script src="client/angular/angular.js"></script>
@@ -34,6 +35,7 @@
     <script src="client/angular-messages/angular-messages.js"></script>
     <script src="client/angular-formly/dist/formly.js"></script>
     <script src="client/angular-formly-templates-bootstrap/dist/angular-formly-templates-bootstrap.js"></script>
+    <script src="client/ng-lodash/build/ng-lodash.js"></script>
 
     <!-- Build -->
     <script src="client/build/app-modules.js"></script>
